--- a/Prj28_Gestionale/src/main/webapp/css/style.css
+++ b/Prj28_Gestionale/src/main/webapp/css/style.css
@@ -1,1 +1,108 @@
-h1 {color: blueviolet;}
+@charset "utf-8";
+html, body {
+    height: 100%;
+}
+*,::after,::before{
+    box-sizing:border-box;
+}
+.nav-button {
+    display: flex;
+    justify-content: flex-end;
+}
+body{
+    background-color: lightblue;
+    font-family: 'Lato', sans-serif;
+    font-size: 100%;
+    line-height: 1.47;
+}
+
+table{
+    border-collapse: collapse;
+}
+.title{
+    text-align: center;
+    margin-bottom: 3rem;
+}
+.container{
+    width: 1200px;
+    padding: 1rem;
+    background-color: white;
+    margin: 0  auto;    
+}
+.container-main {
+    min-height: calc(100% - 88.51px);
+}
+.container-footer {
+    border-top: 1px solid lightgray;
+}
+.center{
+    margin: 0  auto;
+}
+.col-6{
+    width: 50%;
+}
+form{
+    padding: 1rem;
+}
+.form-group{
+    margin-bottom: 1rem;
+}
+label{
+    display: inline-block;
+    margin-bottom: 0.5rem;
+}
+.form-control{
+    display: block;
+    width: 100%;
+    padding : 0.375rem 0.75rem;
+    line-height: 1.5rem;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+}
+.btn{
+    padding: 0.375rem 0.75rem;
+    display: inline-block;
+    text-align: center;
+    border:1px solid transparent;
+    background-color: transparent;
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+.btn-primary{
+    color:white;
+    background-color: #dc3545;
+    border-color: #dc3545;
+}
+.btn-secondary{
+    color:white;
+    background-color:#6c757d;
+}
+
+.table{
+    width: 100%;
+
+}
+.table-striped tbody tr:nth-child(odd) {
+    background-color: rgba(0,0,0,0.05);
+}
+.table th,.table td{
+    padding: 0.75rem;
+    border-top: 1px solid lightgray;
+}
+.tableTitle{
+    padding: 0.75rem;
+    font-size: 1.5rem;
+}
+.mt-3{
+    margin-top: 1rem;
+}
+.mt-5 {
+    margin-top: 2rem;
+}
+.mr-3{
+    margin-right: 1rem;
+}
+.btn:disabled{
+    opacity:0.65;
+    cursor:default;
+}
